just fix the issue of overflowing display

--- a/sphiderass/src/App.scss
+++ b/sphiderass/src/App.scss
@@ -7,6 +7,9 @@
   font-family: "Raino sans";
   src: url("Font/Raino sans.otf") format("truetype");
 }
+*,body{
+  overflow-x: hidden;
+}
 
 :root {
   --background-light-mode: #f6f6f6; /* grey */
